Add main project

--- a/Spotitoast.Spotify/Spotitoast.Spotify.csproj
+++ b/Spotitoast.Spotify/Spotitoast.Spotify.csproj
@@ -14,4 +14,8 @@
     <ProjectReference Include="..\Spotitoast.Configuration\Spotitoast.Configuration.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Client\WebSocket\" />
+  </ItemGroup>
+
 </Project>
