--- a/Spotitoast.Spotify/Spotitoast.Spotify.csproj
+++ b/Spotitoast.Spotify/Spotitoast.Spotify.csproj
@@ -5,9 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="JetBrains.Annotations" Version="10.2.1" />
-    <PackageReference Include="SpotifyAPI.Web" Version="4.0.0" />
-    <PackageReference Include="SpotifyAPI.Web.Auth" Version="4.0.0" />
+    <PackageReference Include="JetBrains.Annotations" Version="2019.1.1" />
+    <PackageReference Include="SpotifyAPI.Web" Version="4.1.0" />
+    <PackageReference Include="SpotifyAPI.Web.Auth" Version="4.1.0" />
+    <PackageReference Include="System.Reactive" Version="4.1.5" />
   </ItemGroup>
 
   <ItemGroup>
