--- a/Spotitoast.Banner/Spotitoast.Banner.csproj
+++ b/Spotitoast.Banner/Spotitoast.Banner.csproj
@@ -25,4 +25,7 @@
       <SubType>Form</SubType>
     </Compile>
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="System.Drawing.Common" Version="4.5.1" />
+  </ItemGroup>
 </Project>
