Fix issue with mouse leave.
Keep banner opened until the user leave the banner.

--- a/Spotitoast/Spotitoast.csproj
+++ b/Spotitoast/Spotitoast.csproj
@@ -5,6 +5,17 @@
     <TargetFrameworks>net472;netcoreapp3.0</TargetFrameworks>
     <UseWindowsForms>true</UseWindowsForms>
     <LangVersion>8</LangVersion>
+    <StartupObject>Spotitoast.Program</StartupObject>
+    <ApplicationIcon>Resources\spotify.ico</ApplicationIcon>
+    <Authors>Antoine Aflalo</Authors>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net472|AnyCPU'">
+    <PlatformTarget>AnyCPU</PlatformTarget>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net472|AnyCPU'">
+    <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
   <ItemGroup Condition=" '$(TargetFramework)' == 'net472' ">
     <Reference Include="System" />
