--- a/Spotitoast/Spotitoast.csproj
+++ b/Spotitoast/Spotitoast.csproj
@@ -8,6 +8,9 @@
     <StartupObject>Spotitoast.Program</StartupObject>
     <ApplicationIcon>Resources\spotify.ico</ApplicationIcon>
     <Authors>Antoine Aflalo</Authors>
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <Version>1.0.0</Version>
+    <SignAssembly>false</SignAssembly>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net472|AnyCPU'">
