--- a/Spotitoast.Configuration/Spotitoast.Configuration.csproj
+++ b/Spotitoast.Configuration/Spotitoast.Configuration.csproj
@@ -2,10 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <LangVersion>8</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="System.Reactive" Version="4.1.5" />
   </ItemGroup>
 
 </Project>
