Update application configuration

--- a/Spotitoast.Demo/Spotitoast.Demo.csproj
+++ b/Spotitoast.Demo/Spotitoast.Demo.csproj
@@ -27,6 +27,6 @@
   <ItemGroup>
     <ProjectReference Include="..\Spotitoast.Banner\Spotitoast.Banner.csproj" />
     <ProjectReference Include="..\Spotitoast.Configuration\Spotitoast.Configuration.csproj" />
-    <ProjectReference Include="..\Spotitoast.Spotify\Spotitoast.Spotify.csproj" />
+    <ProjectReference Include="..\Spotitoast.Logic\Spotitoast.Logic.csproj" />
   </ItemGroup>
 </Project>
