--- a/Spotitoast.Configuration/Spotitoast.Configuration.csproj
+++ b/Spotitoast.Configuration/Spotitoast.Configuration.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.IO.RecyclableMemoryStream" Version="1.2.2" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="System.Reactive" Version="4.1.5" />
   </ItemGroup>
