--- a/Spotitoast.Logic/Spotitoast.Logic.csproj
+++ b/Spotitoast.Logic/Spotitoast.Logic.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.IO.RecyclableMemoryStream" Version="1.2.2" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="Ninject" Version="3.3.4" />
     <PackageReference Include="System.Drawing.Common" Version="4.5.1" />
