--- a/Spotitoast/Spotitoast.csproj
+++ b/Spotitoast/Spotitoast.csproj
@@ -2,7 +2,6 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFrameworks>net472;netcoreapp3.0</TargetFrameworks>
     <UseWindowsForms>true</UseWindowsForms>
     <LangVersion>8</LangVersion>
     <StartupObject>Spotitoast.Program</StartupObject>
@@ -11,6 +10,7 @@
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
     <Version>1.0.0</Version>
     <SignAssembly>false</SignAssembly>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net472|AnyCPU'">
@@ -51,5 +51,10 @@
     <ProjectReference Include="..\Spotitoast.Configuration\Spotitoast.Configuration.csproj" />
     <ProjectReference Include="..\Spotitoast.HotKeys\Spotitoast.HotKeys.csproj" />
     <ProjectReference Include="..\Spotitoast.Logic\Spotitoast.Logic.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="System.Runtime.Extensions, Version=4.2.2.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+      <HintPath>..\..\..\..\..\..\usr\share\dotnet\packs\Microsoft.NETCore.App.Ref\3.1.0\ref\netcoreapp3.1\System.Runtime.Extensions.dll</HintPath>
+    </Reference>
   </ItemGroup>
 </Project>
