Fix desktop file

--- a/Spotitoast.Linux/Resources/Spotitoast.desktop
+++ b/Spotitoast.Linux/Resources/Spotitoast.desktop
@@ -1,9 +1,8 @@
-#!/usr/bin/env xdg-open
 [Desktop Entry]
 Type=Application
 Encoding=UTF-8
 Name=Spotitoast
 Comment=Use command line to control Spotify with nice DBUS notification
 Exec=/opt/spotitoast/Spotitoast.Linux
-Icon=/opt/spotitoast/Resources/spotitoast.ico
+Icon=Spotitoast
 Terminal=false
