--- a/Spotitoast.Linux/Spotitoast.Linux.csproj
+++ b/Spotitoast.Linux/Spotitoast.Linux.csproj
@@ -14,7 +14,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <None Include="Resources\spotitoast.ico">
+        <None Include="Resources\Spotitoast.ico">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
         <None Update="Resources\Spotitoast.desktop">
