--- a/Job.Scheduler/Job.Scheduler.csproj
+++ b/Job.Scheduler/Job.Scheduler.csproj
@@ -5,7 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Scheduler" />
+      <PackageReference Include="Ninject" Version="3.3.4" />
     </ItemGroup>
 
 </Project>
