Make the Spotify client use the jobScheduler

--- a/Spotitoast.Spotify/Spotitoast.Spotify.csproj
+++ b/Spotitoast.Spotify/Spotitoast.Spotify.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Job.Scheduler\Job.Scheduler.csproj" />
     <ProjectReference Include="..\Spotitoast.Configuration\Spotitoast.Configuration.csproj" />
   </ItemGroup>
 
