--- a/Spotitoast.Configuration/Spotitoast.Configuration.csproj
+++ b/Spotitoast.Configuration/Spotitoast.Configuration.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <LangVersion>8</LangVersion>
-    <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
+    <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
