--- a/Job.Scheduler/Job.Scheduler.csproj
+++ b/Job.Scheduler/Job.Scheduler.csproj
@@ -4,4 +4,16 @@
         <TargetFramework>netstandard2.1</TargetFramework>
     </PropertyGroup>
 
+    <PropertyGroup>
+        <PackageId>Job.Scheduler</PackageId>
+        <Version>1.0.0</Version>
+        <Authors>Antoine Aflalo</Authors>
+        <Description>A simple job scheduling library relying on the async/await pattern in C#. Supports Recurring Jobs, Delayed Jobs and One Time Jobs.</Description>
+        <PackageLicenseExpression>BSD License 2.0</PackageLicenseExpression>
+        <PackageLicenseUrl>https://opensource.org/licenses/BSD-3-Clause</PackageLicenseUrl>
+    </PropertyGroup>
+    <PropertyGroup>
+        <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
+    </PropertyGroup>    
+
 </Project>
