--- a/Spotitoast.Hotkeys/Spotitoast.HotKeys.csproj
+++ b/Spotitoast.Hotkeys/Spotitoast.HotKeys.csproj
@@ -2,9 +2,9 @@
 
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <TargetFrameworks>net48;netcoreapp3.1</TargetFrameworks>
     <UseWindowsForms>true</UseWindowsForms>
     <LangVersion>8</LangVersion>
+    <TargetFramework>net5.0-windows</TargetFramework>
   </PropertyGroup>
   <ItemGroup Condition=" '$(TargetFramework)' == 'net472' ">
     <Reference Include="System" />
