--- a/Spotitoast/Spotitoast.csproj
+++ b/Spotitoast/Spotitoast.csproj
@@ -1,9 +1,9 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <UseWindowsForms>true</UseWindowsForms>
-    <LangVersion>8</LangVersion>
+    <LangVersion>latest</LangVersion>
     <StartupObject>Spotitoast.Program</StartupObject>
     <ApplicationIcon>Resources\spotify.ico</ApplicationIcon>
     <Authors>Antoine Aflalo</Authors>
