Add concept of JobId and tests

--- a/Job.Scheduler.Tests/Job.Scheduler.Tests.csproj
+++ b/Job.Scheduler.Tests/Job.Scheduler.Tests.csproj
@@ -13,4 +13,8 @@
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Job.Scheduler\Job.Scheduler.csproj" />
+    </ItemGroup>
+
 </Project>
