--- a/Job.Scheduler/Job.Scheduler.csproj
+++ b/Job.Scheduler/Job.Scheduler.csproj
@@ -6,12 +6,16 @@
 
     <PropertyGroup>
         <PackageId>Job.Scheduler</PackageId>
-        <Version>1.1.0</Version>
+        <Version>2.0.0</Version>
         <Authors>Antoine Aflalo</Authors>
         <Description>A simple job scheduling library relying on the async/await pattern in C#. Supports Recurring Jobs, Delayed Jobs and One Time Jobs.</Description>
         <PackageLicenseExpression>BSD-3-Clause</PackageLicenseExpression>
         <PackageProjectUrl>https://github.com/Belphemur/Spotitoast/tree/master/Job.Scheduler</PackageProjectUrl>
         <RepositoryUrl>https://github.com/Belphemur/Spotitoast</RepositoryUrl>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    </PropertyGroup>
+    <PropertyGroup>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
     </PropertyGroup>
 
 </Project>
