--- a/Spotitoast.Spotify/Spotitoast.Spotify.csproj
+++ b/Spotitoast.Spotify/Spotitoast.Spotify.csproj
@@ -7,13 +7,13 @@
 
   <ItemGroup>
     <PackageReference Include="JetBrains.Annotations" Version="2020.3.0" />
+    <PackageReference Include="Job.Scheduler" Version="2.0.2" />
     <PackageReference Include="SpotifyAPI.Web" Version="6.1.0" />
     <PackageReference Include="SpotifyAPI.Web.Auth" Version="6.1.0" />
     <PackageReference Include="System.Reactive" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Job.Scheduler\Job.Scheduler.csproj" />
     <ProjectReference Include="..\Spotitoast.Configuration\Spotitoast.Configuration.csproj" />
   </ItemGroup>
 
