--- a/Spotitoast.Hotkeys/Spotitoast.HotKeys.csproj
+++ b/Spotitoast.Hotkeys/Spotitoast.HotKeys.csproj
@@ -3,8 +3,8 @@
   <PropertyGroup>
     <OutputType>Library</OutputType>
     <UseWindowsForms>true</UseWindowsForms>
-    <LangVersion>8</LangVersion>
-    <TargetFramework>net7.0-windows</TargetFramework>
+    <LangVersion>latest</LangVersion>
+    <TargetFramework>net8.0-windows</TargetFramework>
   </PropertyGroup>
   <ItemGroup Condition=" '$(TargetFramework)' == 'net472' ">
     <Reference Include="System" />
